--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "https://arvimal.github.io"
 languageCode = "en-us"
 title = "The Child is Father of the Man"
 theme = "Hugo-Octopress"
-publishDir = "output"
+publishDir = "docs"
