build with theme - update submodule reference

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 
 # baseurl = "/"
-baseurl = "https://arvimal.github.io"
+baseurl = "arvimal.github.io"
 disablePathToLower = false
 languageCode = "en-us"
 title = "The Child is Father of the Man"
