--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -67,7 +67,7 @@ codeLineNumbers = false
 enableMathNotation = false
 
 # directory(s) where your articles are located
-mainSections = ["posts"] # see config details here https://gohugo.io/functions/where/#mainsections
+mainSections = ["posts", "docs"] # see config details here https://gohugo.io/functions/where/#mainsections
 
 # Label Non inline images on an article body
 figurePositionShow = false # toggle on or off globally
