--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -4,7 +4,7 @@ enableSearch = true
 # socials
 twitter = "@janedoe"
 largeTwitterCard = false # set to true if you want to show a large twitter card image. The default is a small twitter card image
-introDescription = "Technologist, perpetual student, teacher, continual incremental improvement."
+introDescription = "Technologist, perpetual student, continual incremental improvement."
 # introURL = "about/" # set the url for the 'read more' button below the introDescription, or set to false to not show the button
 # description = "A theme based on VMware's Clarity Design System for publishing technical blogs with Hugo." # Set your site's meta tag (SEO) description here. Alternatively set this description in your home page content file e.g. content/_index.md. Whatever is set in the latter will take precedence.
 # keywords = ["design", "clarity", "hugo theme"] # Set your site's meta tag (SEO) keywords here. Alternatively set these in your home page content file e.g. content/_index.md. Whatever is set in the latter will take precedence.
@@ -41,11 +41,11 @@ usePageBundles = false
 # the originals to get the files included with Hugo Clarity.
 #
 # Images:
-imagesDir = "images/" # without a leading forward slash
+imagesDir = "images" # without a leading forward slash
 # Icons:
-iconsDir = "icons/" # without a leading forward slash
+iconsDir = "icons" # without a leading forward slash
 # Fonts:
-fontsDir = "fonts/" # without a leading forward slash
+fontsDir = "fonts" # without a leading forward slash
 
 # Social media sharing image: Will be used on Twitter, Facebook, LinkedIn, etc.
 # when a given page has no other image present.
