--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,8 +1,8 @@
 # set `baseurl` to your root domain
 # if you set it to "/" share icons won't work properly on production
 baseurl = "https://arvimal.github.io/"  # Include trailing slash
-# title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
-#copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
+title = "arvimal.github.io"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
+copyright = "Copyright © 2008–2023, Vimal A.R; all rights reserved."
 # canonifyurls = true
 paginate = 10
 theme = ["github.com/chipzoller/hugo-clarity"]
