--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -90,8 +90,8 @@ enforceLightMode = false
 # footerLogo = "icons/copy.svg"
 
 # Customize Sidebar Disclaimer Text
-# sidebardisclaimer = true
-# disclaimerText = "The opinions expressed on this site are my own personal opinions and do not represent my employer’s view in any way."
+sidebardisclaimer = true
+disclaimerText = "The opinions expressed on this site are my own personal opinions and do not represent my employer’s view in any way."
 
 # Text for the languages menu.
 languageMenuName = "🌐"
