Set site avatar

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -136,7 +136,7 @@ languageMenuName = "🌐"
 # website author
 [author]
 name = "Vimal A. R"
-# photo = "images/jane-doe.png" #include this if you would like to show the author photo on the sidebar
+photo = "images/avatar.jpg" #include this if you would like to show the author photo on the sidebar
 
 [plausible_analytics]
 enable = false # to enable plausible analytics set to true.
