--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,6 +8,7 @@ paginate = 10
 theme = ["github.com/chipzoller/hugo-clarity"]
 introDescription = "yes"
 description = "yes"
+usePageBundles = "yes"
 
 DefaultContentLanguage = "en"
 # [languages]
