Change theme to Blowfish v2

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,7 +5,7 @@ title = "arvimal.github.io"  # Edit directly from config/_default/languages.toml
 copyright = "Copyright © 2008–2023, Vimal A.R; all rights reserved."
 # canonifyurls = true
 paginate = 10
-theme = ["github.com/chipzoller/hugo-clarity"]
+theme = "github.com/nunocoracao/blowfish/v2"
 introDescription = "yes"
 description = "yes"
 usePageBundles = "yes"
