--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,11 +1,13 @@
+# https://blowfish.page/docs/getting-started/
+theme = "github.com/nunocoracao/blowfish/v2"
+
+title = "arvimal.github.io"  
+copyright = "Copyright © 2008–2023, Vimal A.R; all rights reserved."
+
 baseurl = "https://arvimal.github.io/"  # Include trailing slash
+
 languageCode = "en"
 
-title = "arvimal.github.io"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
-copyright = "Copyright © 2008–2023, Vimal A.R; all rights reserved."
-canonifyurls = true
-paginate = 10
-theme = "github.com/nunocoracao/blowfish/v2"
 introDescription = "yes"
 description = "yes"
 usePageBundles = "yes"
