--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -5,10 +5,6 @@
   pageRef = "posts"
   weight = 10
 
-[[main]]
-  name = "Topics"
-  pageRef = "categories"
-  weight = 20
 
 [[main]]
   pre = "github"
@@ -23,7 +19,7 @@
 
 [[main]]
   name = "About"
-  url = "about/"
+  pageRef = "about/"
   weight = 50
 
 [[social]]
